# infra

./: .gitignore  .sops.yaml  CONTAINERIZATION.md  DEMO_PLAN.md  README.md  demo-images.nix  flake.nix
.github/workflows/: check.yml  deploy.yml  provision-cd-key.yml  update-flake-lock.yml
hosts/bougie-relay/: README.md  configuration.nix  disko.nix
hosts/bougierepo/: configuration.nix  disko.nix
hosts/bougierepo/landing/: index.html
hosts/demo/: configuration.nix  disko.nix
hosts/mageos-testing/: configuration.nix  disko.nix  testing.nix
hosts/origin/: configuration.nix  disko.nix  mageos-maker.nix  nginx.nix
hosts/origin/bougie/: index.html  llms.txt
hosts/origin/bougie-site/: index.html
hosts/origin/cresset/: index.html
hosts/origin/cresset-site/: index.html
hosts/origin/site/: index.html
hosts/telemetry/: backup.nix  configuration.nix  disko.nix
hosts/telemetry/bougie-collector/: Cargo.toml
hosts/telemetry/bougie-collector/src/: dashboard.html  main.rs
modules/: ci-deploy-key.nix  secrets.nix
scripts/: update-mageos-maker.sh
secrets/: bougierepo.yaml  demo.yaml  relay.yaml
